@@ -193,3 +193,63 @@ kjhkj hkj hkj lkh kjh kjlh kj</TD>
     <td>Really, a test!</td>
   </tr>
 </table>
+<TABLE BORDER="50">
+<TR>
+    <TD>1</TD>
+    <TD>2</TD>
+</TR>
+<TR>
+    <TD>3</TD>
+    <TD>4</TD>
+</TR>
+</TABLE>
+
+<TABLE BORDER="50" width="50%">
+<TR>
+    <TD>50%</TD>
+    <TD>2</TD>
+</TR>
+<TR>
+    <TD>3</TD>
+    <TD>4</TD>
+</TR>
+</TABLE>
+
+<TABLE BORDER="50" width="100%">
+<TR>
+    <TD>100%</TD>
+    <TD>2</TD>
+</TR>
+<TR>
+    <TD>3</TD>
+    <TD>4</TD>
+</TR>
+</TABLE>
+
+
+<TABLE BORDER="50" width="5%">
+<TR>
+    <TD>5%</TD>
+    <TD>2</TD>
+</TR>
+<TR>
+    <TD>3</TD>
+    <TD>4</TD>
+</TR>
+</TABLE>
+
+<TABLE BORDER="50" width="300">
+<TR>
+    <TD>300pix</TD>
+    <TD>2</TD>
+</TR>
+<TR>
+    <TD>3</TD>
+    <TD>4</TD>
+</TR>
+</TABLE><TABLE BORDER="1" width="300">
+<TR>
+    <TD>300pix</TD>
+    <TD>2</TD>
+</TR>
+</TABLE>
